--- a/Areas/Admin/Views/HocVienDangKys/DsHvDuTuyen.cshtml
+++ b/Areas/Admin/Views/HocVienDangKys/DsHvDuTuyen.cshtml
@@ -292,7 +292,7 @@
                                                 }
                                                 @if (item.DuTuyen_TrangThai == 9)
                                                 {
-                                                    <label class="form-label" style="color:blue">Hồ sở đủ, đúng</label>
+                                                    <label class="form-label" style="color:blue">Hồ sơ đủ, đúng</label>
                                                 }
                                             </td>
                                             <td style="text-align:center; vertical-align:middle" class="text-nowrap">
