--- a/Areas/Admin/Views/AdminAccounts/Delete.cshtml
+++ b/Areas/Admin/Views/AdminAccounts/Delete.cshtml
@@ -5,69 +5,77 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>AdminAccount</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Admin_Username)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Admin_Username)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Admin_Pass)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Admin_Pass)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Admin_Ho)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Admin_Ho)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Admin_Ten)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Admin_Ten)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Admin_Quyen)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Admin_Quyen)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Khoa_ID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Khoa_ID)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+<header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
+    <div class="container-fluid px-4">
+        <div class="page-header-content">
+            <div class="row align-items-center justify-content-between pt-3">
+                <div class="col-auto mb-1">
+                    <div class="page-header-title  mb-2">
+                        <div class="page-header-icon"><i data-feather="list"></i></div>
+                        <span>Xoá dữ liệu</span>
+                    </div>
+                </div>
+            </div>
         </div>
-    }
+    </div>
+</header>
+<div>
+    <div class="container-fluid px-12">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card card-header-actions mt-1 mb-1 ">
+                    <dl class="dl-horizontal m-3">
+                        <dt>
+                            Tên tài khoản
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Admin_Username)
+                        </dd>
+                        <dt>
+                            Họ
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Admin_Ho)
+                        </dd>
+
+                        <dt>
+                            Tên
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Admin_Ten)
+                        </dd>
+
+                        <dt>
+                           Quyền
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Admin_Quyen)
+                        </dd>
+
+                        <dt>
+                            Khoa
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Khoa_ID)
+                        </dd>
+
+                    </dl>
+
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
+
+                        <div class="form-actions no-color m-3">
+                            <input type="submit" value="Xoá" class="btn btn-danger" />
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
