--- a/Areas/Admin/Views/AdminAccounts/Edit.cshtml
+++ b/Areas/Admin/Views/AdminAccounts/Edit.cshtml
@@ -35,12 +35,11 @@
                         @Html.AntiForgeryToken()
 
                         <div class="form-horizontal">
-                            <hr />
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             @Html.HiddenFor(model => model.Admin_ID)
 
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Admin_Username, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <label class="control-label col-md-2" for="Admin_Username">Tên tài khoản</label>
                                 <div class="col-md-10">
                                     @Html.EditorFor(model => model.Admin_Username, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.Admin_Username, "", new { @class = "text-danger" })
@@ -48,7 +47,7 @@
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Admin_Pass, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <label class="control-label col-md-2" for="Admin_Pass">Mật khẩu</label>
                                 <div class="col-md-10">
                                     @Html.EditorFor(model => model.Admin_Pass, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.Admin_Pass, "", new { @class = "text-danger" })
@@ -56,7 +55,7 @@
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Admin_Ho, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <label class="control-label col-md-2" for="Admin_Ho">Họ</label>
                                 <div class="col-md-10">
                                     @Html.EditorFor(model => model.Admin_Ho, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.Admin_Ho, "", new { @class = "text-danger" })
@@ -64,7 +63,7 @@
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Admin_Ten, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <label class="control-label col-md-2" for="Admin_Ten">Tên</label>
                                 <div class="col-md-10">
                                     @Html.EditorFor(model => model.Admin_Ten, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.Admin_Ten, "", new { @class = "text-danger" })
@@ -72,7 +71,7 @@
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Admin_Quyen, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <label class="control-label col-md-2" for="Admin_Quyen">Quyền</label>
                                 <div class="col-md-10">
                                     @Html.EditorFor(model => model.Admin_Quyen, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.Admin_Quyen, "", new { @class = "text-danger" })
@@ -80,16 +79,16 @@
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Khoa_ID, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <label class="control-label col-md-2" for="Khoa_ID">Khoa</label>
                                 <div class="col-md-10">
                                     @Html.EditorFor(model => model.Khoa_ID, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.Khoa_ID, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-
+                            <br />
                             <div class="form-group">
                                 <div class="col-md-offset-2 col-md-10">
-                                    <input type="submit" value="Save" class="btn btn-default" />
+                                    <input type="submit" value="Lưu" class="btn btn-primary" />
                                 </div>
                             </div>
                         </div>
