--- a/Areas/Admin/Views/AdminAccounts/Index.cshtml
+++ b/Areas/Admin/Views/AdminAccounts/Index.cshtml
@@ -4,7 +4,11 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
-
+<style>
+    th, td {
+        white-space: nowrap;
+    }
+</style>
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
         <div class="page-header-content">
@@ -13,10 +17,6 @@
                     <div class="page-header-title  mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
                         <span>Quản lý tài khoản</span>
-                        <button>
-                            @Html.ActionLink("Thêm mới", "Create")
-                        </button>
-
                     </div>
                 </div>
             </div>
@@ -27,53 +27,68 @@
     <div class="row">
         <div class="col-md-12">
             <div class="card card-header-actions mt-1 mb-1 ">
-                <table class="table table-striped table-hover">
-                    <tr>
-                        <th>
-                            Tài khoản
-                        </th>
-                        <th>
-                           Họ 
-                        </th>
-                        <th>
-                            Tên
-                        </th>
-                        <th>
-                            Quyền
-                        </th>
-                        <th>
-                            Khoa
-                        </th>
-                        <th></th>
-                    </tr>
+                <div class="card-header">
+                    <span id="sp_tieude">Danh sách tài khoản hệ thống</span>
+                    @*<button class="btn btn-outline-primary align-items-center" >
+            @Html.ActionLink("Thêm mới", "Create")
+        </button>*@
+                    <a class="btn btn-outline-primary align-items-center"  href="@Url.Action("Create", "AdminAccounts")"> Thêm mới</a>
 
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Admin_Username)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Admin_Ho)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Admin_Ten)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Admin_Quyen)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Khoa_ID)
-                            </td>
-                            <td>
-                                @Html.ActionLink("Sửa", "Edit", new { id = item.Admin_ID }) |
-                                @*@Html.ActionLink("Chi tiết", "Details", new { id = item.Admin_ID }) |*@
-                                @Html.ActionLink("Xoá", "Delete", new { id = item.Admin_ID })
-                            </td>
-                        </tr>
-                    }
+                </div> <div class="card-body">
+                    <div class="row g-1">
+                        <div class="col-lg-12 col-12">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-hover">
+                                    <tr>
+                                        <th>
+                                            Tài khoản
+                                        </th>
+                                        <th>
+                                            Họ
+                                        </th>
+                                        <th>
+                                            Tên
+                                        </th>
+                                        <th>
+                                            Quyền
+                                        </th>
+                                        <th>
+                                            Khoa
+                                        </th>
+                                        <th></th>
+                                    </tr>
 
-                </table>
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Admin_Username)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Admin_Ho)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Admin_Ten)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Admin_Quyen)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Khoa_ID)
+                                            </td>
+                                            <td>
+                                                @Html.ActionLink("Sửa", "Edit", new { id = item.Admin_ID }) |
+                                                @*@Html.ActionLink("Chi tiết", "Details", new { id = item.Admin_ID }) |*@
+                                                @Html.ActionLink("Xoá", "Delete", new { id = item.Admin_ID })
+                                            </td>
+                                        </tr>
+                                    }
+
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
