--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -8,6 +8,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 <script>
     $(document).ready(function () {
+        $('input[type="radio"]').on('click', function (event) {
+            $('#errorMessage').text("");
+            $('#login_CCCD_Error').text("");
+            $('#login_password_Error').text("");
+        });
 
         //$("#login_CCCD").val('1');
         //$("#login_password").val('123456');
